RESOLVED FIXED128953
TextFieldInputType::handleBeforeTextInsertedEvent shouldn't use plainText
https://bugs.webkit.org/show_bug.cgi?id=128953
Summary TextFieldInputType::handleBeforeTextInsertedEvent shouldn't use plainText
Ryosuke Niwa
Reported 2014-02-17 22:02:23 PST
Right now TextFieldInputType::handleBeforeTextInsertedEvent uses plainText, which triggers a synchronous layout. We shouldn't use that. Also, plainText uses render text, etc... to obtain text may collapse some whitespaces which may or may not affect the result numGraphemeClusters returns. Instead, use cached selection start & selection end to subtract the part of the inner text that has been selected.
Attachments
Fixes the bug (2.42 KB, patch)
2014-02-17 22:04 PST, Ryosuke Niwa
ap: review+
Ryosuke Niwa
Comment 1 2014-02-17 22:04:04 PST
Created attachment 224471 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2014-02-18 15:59:05 PST
Note You need to log in before you can comment on or make changes to this bug.